--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
+    "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "maath": "^0.10.8",
     "motion": "^11.15.0",
