--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@motionone/utils": "^10.18.0",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "maath": "^0.10.8",
-    "motion": "^11.15.0",
+    "motion": "^11.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
