--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "maath": "^0.10.8",
     "motion": "^11.16.0",
