--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2",
     "three": "^0.172.0",
